# nutribot

./: .env.example  .gitignore  README.md  TODO.md  chat.py  notebook.ipynb  nutribot.db  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt
app/: actions.ts  agent.py  agent_app.py  agent_app_2.py  app.py  database.py  entry-card.tsx  globals.css  home-progress-card.tsx  layout.tsx  main.py  meal-logger.tsx  meal_logger_app.py  models.py  page.tsx  shared-ui.tsx  test_db.py  test_db_2.py  test_db_3.py
app-2/: app.py  langgraph.json  pyproject.toml
app-2/graph/: agent.py  db.py  models.py  tools.py
app/memory/: chroma_memory.py
app/profile/: page.tsx
chat_client/: __init__.py  chat_interface.py  conversation.py  mcp_client.py  openai_client.py  tool_router.py
lib/: auth.ts  dates.ts  goals.ts  macro-adjust.ts  macro-parser.ts  supabase.ts
mcp_server/: db.py  journal_parser.py  server.py  workout_principles.py
mcp_server/config/: workout_principles.json
mcp_server/notion/: __init__.py  notion_client.py
mcp_server/tools/: journal_tools.py  whoop_tools.py
nutribot_core/: analytics.py  bot.py  crud.py  db.py  init_db.py  meal_analyzer.py  models.py  schemas.py  utils.py
scripts/: seed_fake_data.py
supabase/: schema.sql
